UI : Added localsettings for stack defaults      Added double display (Base cost -> Discounted cost) for discounted cards      Fixed Zoomed floating hand going off-screenon mobile      Set smaller font on settings panel      Light mobile css fixes

--- a/src/css/GameXBody.scss
+++ b/src/css/GameXBody.scss
@@ -412,6 +412,7 @@
     transform: translateY(80%);
     transition: transform .8s;
     z-index: 1000;
+    max-height: 82vh;
 
     .hand_sorter{
       left: 30%;
